fixed the quotes for mobile
fixed it so the quotes will change size when screen is smaller

--- a/Template/explore-html/about-us.html
+++ b/Template/explore-html/about-us.html
@@ -475,33 +475,33 @@
                         <ul>                            
                             <li data-transition="fade">
                             
-                                <img src="http://webneel.com/daily/sites/default/files/images/daily/07-2013/3-birds-black-and-white-photography-by-cohen.jpg"  alt="">
-                                
-                                <div class="caption title sft"
+                                <img src="http://webneel.com/daily/sites/default/files/images/daily/07-2013/3-birds-black-and-white-photography-by-cohen.jpg"  alt="">                            
+
+                                 <div class="caption title sft"
                                      data-x="250"
                                      data-y="210"
                                      data-speed="1000"
-                                     data-start="1000"
+                                     data-start="2000"
                                      data-easing="easeOutExpo">
-                                     <div class="testimonial">                   
-                                    
-                                                <blockquote>
-                                                    
-                                                    <h2><strong><em>NSH means inspiration. The immense privilege of NSH <br class="hidden-phone hidden-tablet">
-                                                    is the opportunity to be surrounded by so many driven, talented, and intelligent <br class="hidden-phone hidden-tablet">
-                                                    people. I've been able to find a lot of role models in the NSH community. <br class="hidden-phone hidden-tablet">
-                                                    Pushing myself to gain the positive traits that I admire in those people <br class="hidden-phone hidden-tablet">
-                                                    has been important for my development as a person.</em></strong></h2>
-                                                    
-                                                    <h3>Bomani Olusegun McClendon, VP of Technology</h3>
-                                                    
-                                                    
+                                     
+                                     <blockquote style= "text-align: center; line-height: 120%;">
+                                     <em>
+                                     NSH means inspiration. <br>
+                                     The immense privilege of NSH is the opportunity to be <br>
+                                     surrounded by so many driven, talented, and intelligent<br>
+                                     people. I've been able to find a lot of role models in the NSH <br>
+                                     community. Pushing myself to gain the positive traits that <br>
+                                     I admire in those people has been important for my <br>
+                                     development as a person.</em>
 
-                                                </blockquote>
-                                                
-                                    </div><!-- end .testimonial -->                              
-                                </div>         
-                                
+                                     <br> <br>
+
+                                     <em> Bomani McClendon, VP of Technology</em>
+                                     </blockquote>
+                                                                     
+                                </div>
+
+
                             </li>
                                  
                                 
@@ -511,49 +511,57 @@
                                 <img src="https://jefflynchdev.files.wordpress.com/2008/12/hill_country_landscape_large.jpg"  alt="">
 
                                <div class="caption title sft"
-                                     data-x="365"
-                                     data-y="300"
+                                     data-x="250"
+                                     data-y="210"
                                      data-speed="1000"
-                                     data-start="1000"
+                                     data-start="2000"
                                      data-easing="easeOutExpo">
-                                     <div class="testimonial">                   
-                                    
-                                                <blockquote>
-                                                    
-                                                    <h2><strong><em>Curabitur posuere, nibh non posuere euismod, metus nunc faucibus, <br class="hidden-phone hidden-tablet">
-                                                    ut placerat leo arcu quis sem dolor amet elementum nunc lobortis nibh. </em></strong></h2>
-                                                    
-                                                    <h3>William Doe, founder</h3>
-                                                    
-                                                </blockquote>
-                                                
-                                    </div><!-- end .testimonial -->                              
-                                </div>                  
+                                     
+                                     <blockquote style= "text-align: center; line-height: 120%;">
+                                     <em>
+                                     NSH means inspiration. <br>
+                                     The immense privilege of NSH is the opportunity to be <br>
+                                     surrounded by so many driven, talented, and intelligent<br>
+                                     people. I've been able to find a lot of role models in the NSH <br>
+                                     community. Pushing myself to gain the positive traits that <br>
+                                     I admire in those people has been important for my <br>
+                                     development as a person.</em>
+
+                                     <br> <br>
+
+                                     <em> Bomani McClendon, VP of Technology</em>
+                                     </blockquote>
+                                                                     
+                                </div>            
                             </li>
 
                             <li data-transition="fade">
 
                                 <img src="http://fc01.deviantart.net/fs70/i/2012/227/f/e/the_sweet_sound_of_rain___variation____grayscale_by_elementinfinity-d57j7vh.jpg"  alt="">
 
-                                <div class="caption title sft"
-                                     data-x="365"
-                                     data-y="300"
+                               <div class="caption title sft"
+                                     data-x="250"
+                                     data-y="210"
                                      data-speed="1000"
-                                     data-start="1000"
+                                     data-start="2000"
                                      data-easing="easeOutExpo">
-                                     <div class="testimonial">                   
-                                    
-                                                <blockquote>
-                                                    
-                                                    <h2><strong><em>Curabitur posuere, nibh non posuere euismod, metus nunc faucibus, <br class="hidden-phone hidden-tablet">
-                                                    ut placerat leo arcu quis sem dolor amet elementum nunc lobortis nibh. </em></strong></h2>
-                                                    
-                                                    <h3>William Doe, founder</h3>
-                                                    
-                                                </blockquote>
-                                                
-                                    </div><!-- end .testimonial -->                              
-                                </div>         
+                                     
+                                     <blockquote style= "text-align: center; line-height: 120%;">
+                                     <em>
+                                     NSH means inspiration. <br>
+                                     The immense privilege of NSH is the opportunity to be <br>
+                                     surrounded by so many driven, talented, and intelligent<br>
+                                     people. I've been able to find a lot of role models in the NSH <br>
+                                     community. Pushing myself to gain the positive traits that <br>
+                                     I admire in those people has been important for my <br>
+                                     development as a person.</em>
+
+                                     <br> <br>
+
+                                     <em> Bomani McClendon, VP of Technology</em>
+                                     </blockquote>
+                                                                     
+                                </div>     
                                 
                             </li>
                         </ul>
@@ -928,7 +936,7 @@
         <br>
         <br>
         <!-- OUR HISTORY ///////////////////////////////////////////////////////////////-->
-                    <div class="row-container">
+            <div class="row-container">
                 <div class="row">
                     <div class="span12">
                         
@@ -985,7 +993,7 @@
                         
                         <br><br>
 
-                        <canvas id="revenueChart" width = "300px" height = "250px" ></canvas>
+                    <canvas id="revenueChart"></canvas>
 
                         
 
