Added pics, made it good for mobile

--- a/Template/explore-html/team.html
+++ b/Template/explore-html/team.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1,requiresActiveX=true">
     
     
-	<title> About us :: Explore HTML5 Template </title>
+	<title> Team :: Explore HTML5 Template </title>
 	<meta name="description" content=" add description  ... ">
     
     <!-- /// Favicons ////////  -->
@@ -331,7 +331,7 @@
 						<div class="row">
 							<div class="span6">
 						
-								<h3>About Us</h3>
+								<h3>Team</h3>
 							
 							</div><!-- end .span6 -->
 							<div class="span6">
@@ -342,7 +342,7 @@
 										<li>
 											<a href="#">Home</a>
 										</li>
-										<li class="current">About us</li>
+										<li class="current">Team</li>
 									</ul>
 									
 								</div><!-- end .breadcrumbs -->
@@ -387,7 +387,7 @@
                     
                         <div class="team-member">
                             
-                            <img src="_content/team/425x425-1.jpg" alt="">
+                            <img src="_content/team/priya-kumar.jpg" alt="">
 
                             <div class="team-member-description">
                             
@@ -395,9 +395,9 @@
                                 
                                     <div class="team-member-description-inner">
                                     
-                                        <h3>Bomani McClendon</h3>
+                                        <h3>Priya Kumar</h3>
                                                 
-                                        <p>Manager</p>
+                                        <p>CEO</p>
                                     
                                     </div><!-- .team-member-description-inner -->
                                     
@@ -409,15 +409,15 @@
                         </div><!-- end .team-member -->
                         
                         <div class="team-member">                    	                        
-                            <img src="_content/team/425x425-2.jpg" alt="">
+                            <img src="_content/team/bomani-mcclendon.jpg" alt="">
                             
                             <div class="team-member-description">
                                
                                <div class="team-member-description-inner">
                                
-                                   <h3>Jane Smith</h3>
+                                   <h3>Bomani McClendon</h3>
                                             
-                                    <p>Manager</p>
+                                    <p>VP of Technology</p>
                                 
                                 </div><!-- end .team-member-description-inner -->
                                 
@@ -428,15 +428,15 @@
                         
                         <div class="team-member">
                             
-                            <img src="_content/team/425x425-3.jpg" alt="">
+                            <img src="_content/team/david-olodort.jpg" alt="">
                             
                             <div class="team-member-description">
                             
                                 <div class="team-member-description-inner">
                                
-                                   <h3>Linda Carter</h3>
+                                   <h3>David Olodort</h3>
                                             
-                                    <p>Manager</p>
+                                    <p>VP of Portfolio Growth</p>
                                 
                                 </div><!-- end .team-member-description-inner -->
                                 
@@ -447,15 +447,15 @@
                         
                         <div class="team-member">              
                             
-                            <img src="_content/team/425x425-4.jpg" alt="">    
+                            <img src="_content/team/katie-ostazeski.jpg" alt="">    
 
                             <div class="team-member-description">
                             
                                 <div class="team-member-description-inner">
                                
-                                   <h3>Julia Doe</h3>
+                                   <h3>Katie Ostazeski</h3>
                                             
-                                    <p>Manager</p>
+                                    <p>VP of People Operations</p>
                                 
                                 </div><!-- end .team-member-description-inner -->
                                 
@@ -478,7 +478,7 @@
                     
                         <div class="team-member">
                             
-                            <img src="_content/team/425x425-1.jpg" alt="">
+                            <img src="_content/team/michael-perugini.jpg" alt="">
 
                             <div class="team-member-description">
                             
@@ -486,9 +486,9 @@
                                 
                                     <div class="team-member-description-inner">
                                     
-                                        <h3>John Smith</h3>
+                                        <h3>Michael Perugini</h3>
                                                 
-                                        <p>Manager</p>
+                                        <p>VP of Finance</p>
                                     
                                     </div><!-- .team-member-description-inner -->
                                     
@@ -500,15 +500,15 @@
                         </div><!-- end .team-member -->
                         
                         <div class="team-member">                                               
-                            <img src="_content/team/425x425-2.jpg" alt="">
+                            <img src="_content/team/connor-regan.jpg" alt="">
                             
                             <div class="team-member-description">
                                
                                <div class="team-member-description-inner">
                                
-                                   <h3>Jane Smith</h3>
+                                   <h3>Connor Regan</h3>
                                             
-                                    <p>Manager</p>
+                                    <p>VP of Business Operations</p>
                                 
                                 </div><!-- end .team-member-description-inner -->
                                 
@@ -519,15 +519,15 @@
                         
                         <div class="team-member">
                             
-                            <img src="_content/team/425x425-3.jpg" alt="">
+                            <img src="_content/team/jasmin-williams.jpg" alt="">
                             
                             <div class="team-member-description">
                             
                                 <div class="team-member-description-inner">
                                
-                                   <h3>Linda Carter</h3>
+                                   <h3>Jasmin Williams</h3>
                                             
-                                    <p>Manager</p>
+                                    <p>VP of Marketing</p>
                                 
                                 </div><!-- end .team-member-description-inner -->
                                 
@@ -535,18 +535,18 @@
                             </div><!-- end .team-member-description -->
                             
                         </div><!-- end .team-member -->
-                        
-                        <div class="team-member">              
+
+                        <div class="team-member">
                             
-                            <img src="_content/team/425x425-4.jpg" alt="">    
+                            <img src="_content/team/blank-space.jpg" alt="">
                             
-                            <div class="team-member-description">
+                            <div class="team-member-description" style="background: white;">
                             
                                 <div class="team-member-description-inner">
                                
-                                   <h3>Julia Doe</h3>
+                                   <h3></h3>
                                             
-                                    <p>Manager</p>
+                                    <p></p>
                                 
                                 </div><!-- end .team-member-description-inner -->
                                 
