--- a/Template/explore-html/_layout/css/elements.css
+++ b/Template/explore-html/_layout/css/elements.css
@@ -1285,13 +1285,18 @@
 	}
 	
 	.team-member-description h3 {
-		margin-bottom: 6px;
-		line-height:22px;
+		margin-bottom: 18px;
+		line-height:18px;
 		font-weight: 500;
 		text-transform: uppercase; 
 		font-size: 14px;
 	}
 	
+	.team-member-description p {
+		font-size: 12px;
+		line-height:16px;
+	}
+
 	.team-member .social-media {
 		position: absolute;
 		bottom: 35px;
@@ -1312,15 +1317,51 @@
 	}
 	@media (max-width: 900px) {
 		
-		.team-member-description h3, p { font-size: 13px; }
+		.team-member-description h3 { 
+			/*font-size: 13px;*/
+			line-height: 16px;
+		}
+
+		.team-member-description p { 
+			/*font-size: 11px; */
+			line-height: 14px;
+		}
 
 		.team-member-description-inner {
-			padding:10px;
+			padding:12px;
 		}
 		.team-member-description h3 {
-			margin-bottom: -3px;
+			margin-bottom: 3px;
 		}
 		
+	}
+	@media (min-width: 585px) and (max-width: 650px) {
+		.team-row {
+			margin-left: 60px;
+		}
+	}
+	@media (min-width: 510px) and (max-width: 585px) {
+		.team-row {
+			margin-left: 30px;
+		}
+	}
+	@media (min-width: 510px) and (max-width: 650px) {
+		.team-member-description h3 {
+			margin-top: 6px;
+			margin-bottom: 18px;
+			line-height: 18px;
+		}
+	}
+	@media (max-width: 360px){
+		.team-member-description h3 { 
+			font-size: 11px;
+			line-height: 14px;
+		}
+
+		.team-member-description p { 
+			font-size: 11px; 
+			line-height: 12px;
+		}
 	}
 	/*
 	@media (max-width: 767px) {
