added grayscale transitions

--- a/Template/explore-html/team.html
+++ b/Template/explore-html/team.html
@@ -387,7 +387,7 @@
                     
                         <div class="team-member">
                             
-                            <img src="_content/team/priya-kumar.jpg" alt="">
+                            <img src="_content/team/priya-kumar.jpg" class="team-member-pic">
 
                             <div class="team-member-description">
                             
@@ -409,7 +409,7 @@
                         </div><!-- end .team-member -->
                         
                         <div class="team-member">                    	                        
-                            <img src="_content/team/bomani-mcclendon.jpg" alt="">
+                            <img src="_content/team/bomani-mcclendon.jpg" class="team-member-pic">
                             
                             <div class="team-member-description">
                                
@@ -428,7 +428,7 @@
                         
                         <div class="team-member">
                             
-                            <img src="_content/team/david-olodort.jpg" alt="">
+                            <img src="_content/team/david-olodort.jpg" class="team-member-pic">
                             
                             <div class="team-member-description">
                             
@@ -447,7 +447,7 @@
                         
                         <div class="team-member">              
                             
-                            <img src="_content/team/katie-ostazeski.jpg" alt="">    
+                            <img src="_content/team/katie-ostazeski.jpg" class="team-member-pic">    
 
                             <div class="team-member-description">
                             
@@ -478,7 +478,7 @@
                     
                         <div class="team-member">
                             
-                            <img src="_content/team/michael-perugini.jpg" alt="">
+                            <img src="_content/team/michael-perugini.jpg" class="team-member-pic">
 
                             <div class="team-member-description">
                             
@@ -500,7 +500,7 @@
                         </div><!-- end .team-member -->
                         
                         <div class="team-member">                                               
-                            <img src="_content/team/connor-regan.jpg" alt="">
+                            <img src="_content/team/connor-regan.jpg" class="team-member-pic">
                             
                             <div class="team-member-description">
                                
@@ -519,7 +519,7 @@
                         
                         <div class="team-member">
                             
-                            <img src="_content/team/jasmin-williams.jpg" alt="">
+                            <img src="_content/team/jasmin-williams.jpg" class="team-member-pic">
                             
                             <div class="team-member-description">
                             
