--- a/Template/explore-html/_layout/css/elements.css
+++ b/Template/explore-html/_layout/css/elements.css
@@ -1309,6 +1309,20 @@
 		display: inline-block;
 	}
 	
+	.team-member-pic {
+		-webkit-filter: grayscale(100%);
+		filter: grayscale(100%);
+		filter: gray;
+		filter: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' height='0'><filter id='greyscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0' /></filter></svg>#greyscale");
+		-webkit-transition: all .5s ease; 
+	}
+
+	.team-member-pic:hover{
+		-webkit-filter: grayscale(0%);
+		filter: grayscale(0%);
+		filter: none;
+	}
+
 	/*@media (min-width: 768px) and (max-width: 979px) {*/
 	@media (max-width: 650px) {
 		
