--- a/Template/explore-html/custom/navbar.css
+++ b/Template/explore-html/custom/navbar.css
@@ -5,16 +5,29 @@
 #logo a img{
     max-height: 50px;
 }
+#gray-logo{
+    display: none;
+}
 #header{
+    background-color: transparent;
+    border-bottom: 0px solid #ddd;
+}
+.stuck{
     background-color: #fff!important;
-    border-bottom: 2px solid #ddd;
+    border-bottom: 0px solid #ddd;
 }
 .sf-menu{
     margin-top: 2em;
 }
-.sf-menu > li > a, .sf-menu > li.dropdown > a{
-    color: #393939;
+#header .sf-menu > li > a, .sf-menu > li.dropdown > a{
+    color: #fff;
     padding-bottom: 2em;
+    font-weight: 500;
+}
+.stuck .sf-menu a{
+    color: #393939!important;
+    padding-bottom: 2em;
+    padding-top: 22px!important;
 }
 #mobile-menu-trigger{
     margin-bottom: 2em;
