Added navbar to about and team

--- a/Template/explore-html/index-2.html
+++ b/Template/explore-html/index-2.html
@@ -50,6 +50,15 @@
     <!-- <link rel="stylesheet" href="_layout/css/skins/orange.css"> -->
     <link rel="stylesheet" href="custom/navbar.css">
     <style type="text/css">
+    #header .sf-menu > li > a, .sf-menu > li.dropdown > a{
+        color: #fff;
+        padding-bottom: 2em;
+        font-weight: 500;
+    }
+    #header{
+        background-color: transparent;
+        border-bottom: 0px solid #ddd;
+    }
     .splash-container { 
         height: 100vh;
       background: url(_content/NSH/home-splash.jpg) no-repeat center center fixed; 
