--- a/Template/explore-html/portfolio-2.html
+++ b/Template/explore-html/portfolio-2.html
@@ -47,13 +47,15 @@
     <!-- <link rel="stylesheet" href="_layout/css/skins/orange.css"> -->
     <link rel="stylesheet" href="custom/navbar.css">
     <style type="text/css">
+    .sf-menu > li > a, .sf-menu > li.dropdown > a{
+        color: #393939!important;
+    }
     .portfolio-item-2 .portfolio-item-description h2 span{
         border-left: 2px solid #CE4115;
     }
     .btn:hover {
         border-color: #CE4115!important;
         color: #CE4115!important;
-        background-color: #fff;
     }
     .portfolio-item-overlay{
         background-color: #3A3A3C;
@@ -135,7 +137,7 @@
                                     <!-- // Logo // -->
                                     <div id="logo">
                                         <a href="index.html">
-                                            <img src="_content/NSH/NSH-Logo-White.png" id="white-logo" alt="website logo white">
+                                            <img src="_content/NSH/nsh_condensed_logo.png" id="white-logo" alt="website logo white">
                                             <img src="_content/NSH/nsh_condensed_logo.png" id="gray-logo" alt="website logo gray">
                                         </a>
                                     </div>
