--- a/Template/explore-html/portfolio-2.html
+++ b/Template/explore-html/portfolio-2.html
@@ -19,7 +19,7 @@
     
     
     <!-- /// Google Fonts ////////  -->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:400,300,500,600">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,300,500,600">
     
     <!-- /// FontAwesome Icons 4.2.0 ////////  -->
     <link rel="stylesheet" href="_layout/css/fontawesome/font-awesome.min.css">
