Added footer css

--- a/Template/explore-html/about-us.html
+++ b/Template/explore-html/about-us.html
@@ -51,6 +51,19 @@
     .sf-menu > li > a, .sf-menu > li.dropdown > a{
         color: #393939!important;
     }
+    #footer{
+        padding: 40px 0 10px 0;
+    }
+    #footer-links h4{
+        display: inline-block;
+        margin-right: 5px;
+    }
+    #footer-links div{
+        display: inline-block;
+    }
+    #footer-links > *{
+        float: right;
+    }
     </style>
     
 </head>
