--- a/Template/explore-html/portfolio-2.html
+++ b/Template/explore-html/portfolio-2.html
@@ -79,6 +79,19 @@
         padding: 0px;
         vertical-align: middle;
     }
+    #footer{
+        padding: 40px 0 10px 0;
+    }
+    #footer-links h4{
+        display: inline-block;
+        margin-right: 5px;
+    }
+    #footer-links div{
+        display: inline-block;
+    }
+    #footer-links > *{
+        float: right;
+    }
     @media (max-width: 767px) {
         .portfolio-item-2 .portfolio-item-description h2 span{
             border-left: 0;
